--- a/src/sass/sidebar/_sidebar.scss
+++ b/src/sass/sidebar/_sidebar.scss
@@ -6,7 +6,7 @@
 	width: $sidebar-width;
 	background-color: $gray-dark;
 	color: lighten($gray-light, 20%);
-	z-index: 310; // to clear the breadcrumbs and the main content
+	z-index: $header-z + 2; 
 	border-top: $nav-top-border-height solid $theme-primary-color;
 	overflow-y: auto;
 	overflow-x: hidden;
